# axme-spec

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
axme_spec/: __init__.py
docs/: ADR-001-protocol-name.md  ADR-004-synapse-no-modification-policy.md  ADR-005-matrix-transport-e2ee-rollout.md  ADR-006-intent-lifecycle-v1.md  idempotency-correlation-rules.md  intent-lifecycle-v1.md  protocol-error-status-model.md  public-api-schema-index.md  schema-versioning-rules.md
schemas/protocol/: intent.ask.v1.json  intent.envelope.v1.json  intent.error.v1.json  intent.event.v1.json  intent.lifecycle.v1.json  intent.reply.v1.json  intent.status.v1.json  message.delivery.v1.json  message.envelope.v2.json  message.envelope.v3.json
schemas/public_api/: api.access_requests.create.request.v1.json  api.access_requests.create.response.v1.json  api.access_requests.get.response.v1.json  api.access_requests.list.response.v1.json  api.access_requests.review.request.v1.json  api.access_requests.review.response.v1.json  api.agents.get.response.v1.json  api.agents.list.response.v1.json  api.aliases.bind.request.v1.json  api.aliases.bind.response.v1.json  api.aliases.list.response.v1.json  api.aliases.resolve.response.v1.json  api.aliases.revoke.response.v1.json  api.approvals.decision.request.v1.json  api.approvals.decision.response.v1.json  api.billing.invoices.get.response.v1.json  api.billing.plan.get.response.v1.json  (+97 more)
scripts/: validate_schemas.py
tests/: test_schema_contracts.py  test_validate_schemas.py
